avoid profile image distortion

--- a/app/assets/stylesheets/journeys.css.scss
+++ b/app/assets/stylesheets/journeys.css.scss
@@ -97,8 +97,7 @@
     width: auto;
     max-width: 30%;
       height: auto;
-  max-height: 30%;
-    width: 30%;
+    max-height: 30%;  
     position: absolute; 
     top: -8px;
     right: -8px;
